Bug 1510667 - Performance Warning: Should use valueOf instead of new. r=geckoview-reviewers,calu
Differential Revision: https://phabricator.services.mozilla.com/D131753